--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="list-bottom">
-                                <span class="list-tagmore">查看其它类别</span>
-                            </div>
+                            <!-- <div class="list-bottom">
+                                 <span class="list-tagmore">查看其它类别</span> 
+                            </div> -->
                         </div>
                         <!-- other一级列表 -->
                         <div class="other-list">
