--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
                                     </ul>
                                 </div>
                             </div>
-                            <!-- <div class="list-bottom">
-                                 <span class="list-tagmore">查看其它类别</span> 
-                            </div> -->
+                            <div class="list-bottom">
+                                <!-- <span class="list-tagmore"></span>  -->
+                                <span class="list-bottom-tips">职位类别</span>
+                            </div>
                         </div>
                         <!-- other一级列表 -->
                         <div class="other-list">
@@ -51,7 +52,7 @@
                                 <span class="list-tagmore">互联网行业职位类别</span>
                             </div>
                         </div>
-                        <!-- 三级列表 -->
+                        <!-- 四级列表 -->
                         <div class="tag-list">
                             <div class="tag-list-tips">
                                 <span class="tag-tips">标签越准确，职位越容易被匹配的求职者发现～</span>
@@ -83,6 +84,11 @@
                                 <div class="tag-bottom-right">
                                     <span class="tag-bottom-reset">重置</span>
                                     <input class="tag-bottom-sure noselected" type="button" value="确定" />
+                                </div>
+                            </div>
+                            <div class="tag-bottom-type">
+                                <div class="tag-bottom-center">
+                                    <span>职位标签</span>
                                 </div>
                             </div>
                         </div>
