标签单独一行

--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
                     </div>
                 </div>
             </div>
+            <div class="form-item">
+                <label for="">职位标签:</label>
+                <div class="tag-input">
+                    <ul id="tag-show">
+
+                    </ul>
+                </div>
+            </div>
         </form>
     </div>
     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
