--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>智联 保面试</title>
+    <title>职位类别控件</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,minimum-scale=1,maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="css/job-prop.css">
 </head>
