--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="release_position_container" id="release-container">
-        <form class="position_item" id="addPositionForm">
+        <div class="position_item" id="addPositionForm">
             <div class="form-item">
                 <label class="required" for="">职位类别: </label>
                 <div class="form-input">
@@ -103,7 +103,7 @@
                     </ul>
                 </div>
             </div>
-        </form>
+        </div>
     </div>
     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <!--<script type="text/javascript" src="js/jquery.nicescroll.js"></script>-->
