--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="form-item">
                 <label class="required" for="">职位类别: </label>
                 <div class="form-input">
-                    <input type="hidden" name="positionInitValue" id="positionInitValue" value="254,255" />
+                    <input type="hidden" name="positionInit" id="positionInit" value="254,255" />
                     <input type="hidden" name="positionType" id="positionType" value="" />
                     <input type="hidden" name="firstType" id="firstType" value="" />
                     <div id="boxJobInput"><span>请选择职位类别</span><i class="icon-arrow-down"></i></div>
