弹出框模式

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                     <div id="boxJob" class="position_list clearfix" data-style="it">
                         <!-- it一级列表 -->
                         <div class="it-list">
+                            <div class="list-top">
+                                <span class="tag-top-cancel" id="closePop">关闭窗口</span>
+                                <span class="list-top-tips">职位类别</span>
+                            </div>
                             <div class="it-list-top clearfix">
                                 <div class="it-list-one">
                                     <ul id="it-list1">
@@ -37,10 +41,9 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="list-bottom">
-                                <!-- <span class="list-tagmore"></span>  -->
+                            <!-- <div class="list-bottom">
                                 <span class="list-bottom-tips">职位类别</span>
-                            </div>
+                            </div> -->
                         </div>
                         <!-- other一级列表 -->
                         <div class="other-list">
@@ -55,6 +58,11 @@
                         </div>
                         <!-- 四级列表 -->
                         <div class="tag-list">
+                            <div class="tag-top-type">
+                                <div class="tag-bottom-center">
+                                    <span>职位标签</span>
+                                </div>
+                            </div>
                             <div class="tag-list-tips">
                                 <span class="tag-tips">标签越准确，职位越容易被匹配的求职者发现～</span>
                                 <div class="tag-selected-top">
@@ -87,11 +95,11 @@
                                     <input class="tag-bottom-sure noselected" type="button" value="确定" />
                                 </div>
                             </div>
-                            <div class="tag-bottom-type">
+                            <!-- <div class="tag-bottom-type">
                                 <div class="tag-bottom-center">
                                     <span>职位标签</span>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -106,6 +114,7 @@
             </div>
         </div>
     </div>
+    <div id="divMask" style="position: absolute; top: 0px; left: 0px; width: 100%; height: 2512px; background: rgb(0, 0, 0); opacity: 0.3; z-index: 8000; display: none;"></div>
     <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
     <!--<script type="text/javascript" src="js/jquery.nicescroll.js"></script>-->
     <script src="js/lagoudata.js"></script>
